applications/nginx-sample/us-routes.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-sample-basedomain
  namespace: nginx-sample
spec:
  port:
    targetPort: nginx-http-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-sample-service
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-sample-vanity
  namespace: nginx-sample
spec:
  host: nginx-sample.apps.us-prod-ccs-01.americas.cshare.net
  port:
    targetPort: nginx-http-8080
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFhDCCA2ygAwIBAgITdQAAAAgDwB9kcy35EQAAAAAACDANBgkqhkiG9w0BAQsF
[...]
      SlXiQGzlqndHvcIl+WhDPXoSdrK6y1W5
      -----END CERTIFICATE-----
      subject=/C=AU/O=Computershare Ltd/CN=Computershare Ltd Root CA SHA256
      issuer=/C=AU/O=Computershare Ltd/CN=Computershare Ltd Root CA SHA256
      -----BEGIN CERTIFICATE-----
      MIIFgzCCA2ugAwIBAgIQVqJNmkYC87ROWYNK+xj4KzANBgkqhkiG9w0BAQsFADBU
[...]
      CDVIs+QqpwkTSj0svhVqQ92xmgGy8eE=
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      REDACTED .....  


      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN PRIVATE KEY-----
      REDACTED.......

      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: nginx-sample-service
    weight: 100
  wildcardPolicy: None
